# vekl

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs  color.slang  common.h  dsl.h  dsl_cuda.h  dsl_metal.h  filter.slang  frame.slang  gen_swizzle.py  intellisense_compat.h  math.slang  noise.slang  pixel.slang  sampling.slang  subtrees.json  text.slang  texture.slang  types.h  vekl.h  vekl.slang  vekl_cpu.h  vekl_cuda.h  vekl_metal.h
backend/: cpu.h  cuda.h  metal.h  opencl.h
backend/cpu/: dispatch.h  logging.h  math.h  pixel.h  primitives.h  types.h
backend/cuda/: dispatch.h  logging.h  math.h  pixel.h  primitives.h  types.h
backend/metal/: dispatch.h  logging.h  math.h  pixel.h  primitives.h  types.h
backend/opencl/: primitives.h
color/: accumulate.slang  oklab.slang  premul.slang  space.slang  spectral.slang  yiq.slang
color/blend/: add.slang  color.slang  color_burn.slang  color_dodge.slang  (+12 more)
common/: logging.h  math.h  pixel.h  types.h
docs/: casing.md  explanation.md  how-to-guides.md
filter/: gaussian.slang  karis.slang  kawase.slang
filters/: blur.h  envelope.h  float.h  radial_blur.h
image/: 2d.h  coords.h  tonemapping.h
math/: mask.slang  rotate.slang
maths/: color.h  easing.h  maths.h  transform.h  trigonometry.h
noise/: blue.slang  fbm.slang  hash.slang  perlin.slang
patterns/: noise.h  patterns.h  patterns.metal
sampling/: bicubic.slang  canvas.slang  dither.slang  radial.slang
scripts/: subtree.py
sdf/: operators.h  sdf.h  shapes.h
src/: lib.rs
texture/: descriptor.slang  format.slang  view.slang
tooling/: intellisense.h
(+42 files in other folders)
